--- a/experiments/baseline_replica/nb_resnet.ipynb
+++ b/experiments/baseline_replica/nb_resnet.ipynb
@@ -37,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size = 100"
+    "batch_size = 400"
    ]
   },
   {
@@ -59,31 +59,20 @@
       "\n",
       "RH training fMRI data shape:\n",
       "(8779, 20530)\n",
-      "(Training stimulus images × RH vertices)\n",
-      "Loading dataset sample names...\n",
-      "Training images: 8779\n",
-      "Test images: 395\n",
-      "\n",
-      "LH training fMRI data shape:\n",
-      "(8779, 18981)\n",
-      "(Training stimulus images × LH vertices)\n",
-      "\n",
-      "RH training fMRI data shape:\n",
-      "(8779, 20530)\n",
       "(Training stimulus images × RH vertices)\n"
      ]
     }
    ],
    "source": [
     "data = Dataset('../../data/subj08')\n",
-    "test_data = Dataset('../../data/subj08', test=True)\n",
+    "#test_data = Dataset('../../data/subj08', test=True)\n",
     "\n",
-    "#train_set, val_set = torch.utils.data.random_split(data, [0.8, 0.2])\n",
+    "train_set, val_set = torch.utils.data.random_split(data, [0.8, 0.2])\n",
     "\n",
     "train_loader = torch.utils.data.DataLoader(data, batch_size=batch_size, shuffle=True)\n",
-    "test_loader = torch.utils.data.DataLoader(test_data, batch_size=batch_size, shuffle=False)\n",
+    "#test_loader = torch.utils.data.DataLoader(test_data, batch_size=batch_size, shuffle=False)\n",
     "\n",
-    "#val_loader = torch.utils.data.DataLoader(val_set, batch_size=batch_size, shuffle=True)"
+    "val_loader = torch.utils.data.DataLoader(val_set, batch_size=batch_size, shuffle=True)"
    ]
   },
   {
@@ -216,14 +205,15 @@
    "source": [
     "def fit_pca(feature_extractor, dataloader):\n",
     "    # Define PCA parameters\n",
-    "    pca = IncrementalPCA(n_components=100, batch_size=batch_size)\n",
+    "    pca = IncrementalPCA(n_components=400, batch_size=batch_size)\n",
     "\n",
     "    # Fit PCA to batch\n",
     "    for _, d in tqdm(enumerate(dataloader), total=len(dataloader)):\n",
     "        if _ == len(dataloader)-1:\n",
     "            break\n",
-    "        # Extract features\n",
-    "        ft = feature_extractor(d[0].to(device))\n",
+    "        with torch.no_grad():\n",
+    "            # Extract features\n",
+    "            ft = feature_extractor(d[0].to(device))\n",
     "        # Flatten the features\n",
     "        ft = torch.hstack([torch.flatten(l, start_dim=1) for l in ft.values()])\n",
     "        # Fit PCA to batch\n",
@@ -241,21 +231,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 72%|███████▏  | 63/88 [23:59<09:35, 23.02s/it]"
+      "  0%|          | 0/22 [00:00<?, ?it/s]/opt/conda/envs/pytorch/lib/python3.9/site-packages/sklearn/decomposition/_incremental_pca.py:348: RuntimeWarning: Mean of empty slice.\n",
+      "  self.noise_variance_ = explained_variance[self.n_components_ :].mean()\n",
+      "/opt/conda/envs/pytorch/lib/python3.9/site-packages/numpy/core/_methods.py:190: RuntimeWarning: invalid value encountered in divide\n",
+      "  ret = ret.dtype.type(ret / rcount)\n",
+      "  5%|▍         | 1/22 [00:23<08:10, 23.37s/it]"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCanceled future for execute_request message before replies were done"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 99%|█████████▉| 87/88 [33:08<00:22, 22.85s/it]\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -265,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,15 +269,16 @@
     "    fmri = []\n",
     "    features = []\n",
     "    for _, d in tqdm(enumerate(dataloader), total=len(dataloader)):\n",
-    "        # Extract features\n",
-    "        if test == False:\n",
-    "            ft = feature_extractor(d[0].to(device))\n",
-    "            if right == False:\n",
-    "                fmri += [d[1].cpu().detach().numpy()]\n",
+    "        with torch.no_grad():\n",
+    "            # Extract features\n",
+    "            if test == False:\n",
+    "                ft = feature_extractor(d[0].to(device))\n",
+    "                if right == False:\n",
+    "                    fmri += [d[1].cpu().detach().numpy()]\n",
+    "                else:\n",
+    "                    fmri += [d[2].cpu().detach().numpy()]\n",
     "            else:\n",
-    "                fmri += [d[2].cpu().detach().numpy()]\n",
-    "        else:\n",
-    "            ft = feature_extractor(d.to(device))\n",
+    "                ft = feature_extractor(d.to(device))\n",
     "        # Flatten the features\n",
     "        ft = torch.hstack([torch.flatten(l, start_dim=1) for l in ft.values()])\n",
     "        # Apply PCA transform\n",
@@ -294,14 +291,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 64%|██████▎   | 56/88 [01:33<00:54,  1.72s/it]"
+      " 32%|███▏      | 7/22 [00:45<01:40,  6.67s/it]"
      ]
     },
     {
@@ -315,8 +312,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 88/88 [02:28<00:00,  1.69s/it]\n",
-      "  0%|          | 0/4 [00:00<?, ?it/s]"
+      "100%|██████████| 22/22 [02:19<00:00,  6.35s/it]\n",
+      " 40%|████      | 2/5 [00:11<00:17,  5.82s/it]"
      ]
     },
     {
@@ -330,7 +327,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4/4 [00:06<00:00,  1.60s/it]\n"
+      "100%|██████████| 5/5 [00:25<00:00,  5.16s/it]\n"
      ]
     }
    ],
@@ -338,52 +335,77 @@
     "right = False\n",
     "\n",
     "features_train, labels_train = extract_features(feature_extractor, train_loader, pca, right=right)\n",
-    "features_test = extract_features(feature_extractor, test_loader, pca, right=right, test=True)"
+    "features_val, labels_val = extract_features(feature_extractor, val_loader, pca, right=right)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "reg = LinearRegression().fit(features_train, labels_train)\n",
-    "fmri_test_pred = reg.predict(features_test)"
+    "fmri_test_pred = reg.predict(features_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 18981/18981 [00:03<00:00, 6169.47it/s]"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(395, 18981)\n"
+      "33.99590956716545\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
-    "print(fmri_test_pred.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fmri_test_pred = fmri_test_pred.astype(np.float32)\n",
-    "np.save(os.path.join(\"algonauts_2023_challenge_submission/subj08/\", 'lh_pred_test.npy'), fmri_test_pred)"
+    "from scipy.stats import pearsonr as corr\n",
+    "\n",
+    "# Empty correlation array of shape: (LH vertices)\n",
+    "lh_correlation = np.zeros(fmri_test_pred.shape[1])\n",
+    "# Correlate each predicted LH vertex with the corresponding ground truth vertex\n",
+    "for v in tqdm(range(fmri_test_pred.shape[1])):\n",
+    "    lh_correlation[v] = corr(fmri_test_pred[:,v], labels_val[:,v])[0]\n",
+    "\n",
+    "score = np.median(lh_correlation) * 100\n",
+    "print(score)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "algonauts",
+   "display_name": "pytorch",
    "language": "python",
-   "name": "algonauts"
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
